samples/_failures_safe/1761487534_ed0464_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49f79c26.c: In function ‘main’:
./samples/SAFE/__tmp_49f79c26.c:185:29: error: expected ‘)’ at end of input
  185 |         if (sm.current_state
      |            ~                ^
      |                             )
./samples/SAFE/__tmp_49f79c26.c:185:9: error: expected declaration or statement at end of input
  185 |         if (sm.current_state
      |         ^~
./samples/SAFE/__tmp_49f79c26.c:185:9: error: expected declaration or statement at end of input
